<resources>
    <string name="app_name">ProyectoASEE</string>
    <string name="api_base_url">https://gateway.marvel.com:443/v1/public/</string>
    <string name="publickey">8930b8251773dc6334474b306aaaa6b6</string>
    <string name="privatekey">a6fd8f30a718e8f8f2e8f462ef36a46ee94f9309</string>
    <string name="characters">Characters</string>
    <string name="comics">Comics</string>
    <string name="series">Series</string>
    <string name="characterImageDescription">Characters image</string>
    <string name="openWeb">Show in web</string>
    <string name="descriptionString">Description</string>
    <string name="comicsString">Comics</string>
    <string name="search">Search</string>
    <string name="fav">Favorite</string>
    <string name="read">Read</string>
    <string name="reading">Reading</string>
    <string name="seen">Seen</string>
    <string name="following">Following</string>
    <string name="pending">Pending</string>
    <string name="load_images">Load images</string>
    <string name="load_images_summary">Not loading images allows you to save data</string>
    <string name="limit_api">Number of resources downloaded</string>
    <string name="limit_api_summary">Select the number of resources to download each time</string>
    <string name="limit_api_dialog">Number of resources</string>
    <string name="settings">Settings</string>
    <string name="options">Options</string>
    <string name="no_data">No data found</string>
    <string name="previous">Previous Related Series</string>
    <string name="next">Next Related Series</string>
</resources>
