<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuSearch"
        android:title="@string/search"
        android:icon="@drawable/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"
        ></item>

    <item
        android:id="@+id/menuShowFavorite"
        android:title="@string/fav"
        ></item>

    <item
        android:id="@+id/menuShowSeen"
        android:title="@string/seen"
        ></item>

    <item
        android:id="@+id/menuShowPending"
        android:title="@string/pending"
        ></item>

    <item
        android:id="@+id/menuShowFollowing"
        android:title="@string/following"
        ></item>

</menu>