<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/character_information_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="56dp"
    android:orientation="vertical">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/relative_layout_character"
        android:layout_width="fill_parent"
        android:layout_height="261dp">

        <com.github.ivbaranov.mfb.MaterialFavoriteButton
            android:id="@+id/characterFavButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:elevation="10dp"
            app:mfb_animate_favorite="true"
            app:mfb_animate_unfavorite="false"
            app:mfb_bounce_duration="300"
            app:mfb_color="black"
            app:mfb_favorite_image="@drawable/ic_fav"
            app:mfb_not_favorite_image="@drawable/ic_no_fav"
            app:mfb_padding="12"
            app:mfb_rotation_angle="360"
            app:mfb_rotation_duration="400"
            app:mfb_size="60"
            app:mfb_type="heart" />

        <ImageView
            android:id="@+id/ivCharacterImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/characterImageDescription" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvCharacterName"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:text="TextView"
            android:textSize="20dp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/characterRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:numStars="5"
            android:progressTint="@color/redToolBar"
            android:stepSize="0.5" />

        <Button
            android:id="@+id/bShowWeb"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/redToolBar"
            android:text="@string/openWeb"
            android:textColor="@color/white" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvChIntroduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descriptionString"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCharacterDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>